--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
             };
 
             // フォームデータのチェック
-            if (!formData.name || !formData.phone || !formData.visitCount) {
+            if (!formData.name || !formData.phone || !formData.selectedSymptom) {
                 alert('お名前・電話番号・メニューすべてご記入ください。');
                 return;
             }
