--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                 name: document.getElementById('name').value,
                 phone: document.getElementById('phone').value,
                 visitCount: visitCount,
-                selectedSymptom: selectedSymptom,
+                selectedSymptom: document.getElementById('selectedSymptom').value,
                 irradiationsCount: irradiationsCount,
                 dates: [selectedFullDate],
                 message: document.getElementById('message').value
