--- a/index.html
+++ b/index.html
@@ -602,14 +602,14 @@
                 name: document.getElementById('name').value,
                 phone: document.getElementById('phone').value,
                 visitCount: visitCount,
-                selectedSymptom: document.getElementById('selectedSymptom').value,
+                selectedSymptom: selectedSymptom,
                 irradiationsCount: irradiationsCount,
                 dates: [selectedFullDate],
                 message: document.getElementById('message').value
             };
 
             // フォームデータのチェック
-            if (!formData.name || !formData.phone || !formData.selectedSymptom) {
+            if (!formData.name || !formData.phone || formData.selectedSymptom.length === 0) {
                 alert('お名前・電話番号・メニューすべてご記入ください。');
                 return;
             }
