--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     margin-bottom: 10px;
     padding: 10px;
     font-weight: bold;
-    background-color: #13ca5e;
+    background-color: #ff9ccd;
     color: white;
     border-radius: 4px;
     text-align: center;
@@ -87,7 +87,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #ff4c4c;
+            background-color: #ff9ccd;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -370,10 +370,16 @@
                 message
             };
 
+            // フォームデータのチェック
+            if (!formData.name || !formData.phone || !formData.dates[0]) {
+                alert('お名前・電話番号・メニューすべてご記入ください。');
+                return;
+            }
+
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪予約フォーム≫\n【お名前】：${formData.name}\n【電話番号】：${formData.phone}\n【ご来院回数】：${formData.visitCount}\n【希望日時】：\n・第一希望日\n${formData.dates[0]}\n・第二希望日\n${formData.dates[1]}\n・第三希望日\n${formData.dates[2]}\n【メッセージ】：${formData.message}`
+                text: `≪予約フォーム≫\n【お名前】：${formData.name}\n【電話番号】：${formData.phone}\n【会員情報】：${formData.visitCount}\n【希望日時】：\n・第一希望日\n${formData.dates[0]}\n・第二希望日\n${formData.dates[1]}\n・第三希望日\n${formData.dates[2]}\n【メッセージ】：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日のキャンセルは無いようにお願いいたします。');
