--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
             };
 
             // フォームデータのチェック
-            if (!formData.name || !formData.phone || !formData.dates[0]) {
-                alert('お名前・電話番号・メニューすべてご記入ください。');
+            if (!formData.name || !formData.phone || !formData.visitCount|| !formData.dates[0]) {
+                alert('お名前・電話番号・会員情報・第一希望日すべてご記入ください。');
                 return;
             }
 
