--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ document.getElementById('date3').addEventListener('change', updateDisplayInfo);
             };
 
             // フォームデータのチェック
-            if (!formData.name || !formData.phone || !formData.visitCoun || !formData.selectedSymptom || formData.selectedSymptom.length === 0) {
+            if (!formData.name || !formData.phone || !formData.visitCoun || !formData.dates[0] || formData.selectedSymptom.length === 0) {
                 alert('お名前・電話番号・会員情報・メニュー・第一希望日すべてご記入ください。');
                 return;
             }
