--- a/index.html
+++ b/index.html
@@ -677,6 +677,9 @@ document.getElementById('date3').addEventListener('change', updateDisplayInfo);
                 selectedSymptom: selectedSymptom,
                 irradiationsCount: irradiationsCount,
                 dates: [selectedFullDate],
+            const date1 = formatDate(document.getElementById('date1').value);
+            const date2 = formatDate(document.getElementById('date2').value);
+            const date3 = formatDate(document.getElementById('date3').value);
                 message: document.getElementById('message').value
             };
 
