--- a/index.html
+++ b/index.html
@@ -675,9 +675,8 @@ document.getElementById('date3').addEventListener('change', updateDisplayInfo);
                 phone: document.getElementById('phone').value,
                 visitCount: visitCount,
                 selectedSymptom: selectedSymptom,
-            const date1 = formatDate(document.getElementById('date1').value);
-            const date2 = formatDate(document.getElementById('date2').value);
-            const date3 = formatDate(document.getElementById('date3').value);
+                irradiationsCount: irradiationsCount,
+                dates: [selectedFullDate],
                 message: document.getElementById('message').value
             };
 
