--- a/index.html
+++ b/index.html
@@ -670,14 +670,22 @@ document.getElementById('date3').addEventListener('change', updateDisplayInfo);
         }
 
         function submitForm() {
+            /* フォームの入力値を取得 */
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+            const date1 = formatDate(document.getElementById('date1').value);
+            const date2 = formatDate(document.getElementById('date2').value);
+            const date3 = formatDate(document.getElementById('date3').value);
+            const message = document.getElementById('message').value;
+
+            /* フォームデータをオブジェクトにまとめる */
             const formData = {
-                name: document.getElementById('name').value,
-                phone: document.getElementById('phone').value,
-                visitCount: visitCount,
-                selectedSymptom: selectedSymptom,
-                irradiationsCount: irradiationsCount,
-                dates: [selectedFullDate],
-                message: document.getElementById('message').value
+                name,
+                phone,
+                visitCount,
+                selectedSymptom,
+                dates: [date1, date2, date3],
+                message
             };
 
             // フォームデータのチェック
