--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ function selectVisit(element) {
             };
 
 // フォームデータのチェック
-if (!formData.name || !formData.phone || !formData.selectedSymptom || formData.selectedSymptom.trim() === '') {
+if (!formData.name || !formData.phone || formData.selectedSymptom.trim() === '') {
     alert('お名前・電話番号・メニューすべてご記入ください。');
     return;
 }
